--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ lto = "off"
 panic = "unwind"
 incremental = true
 codegen-units = 256
-
 [profile.release]
 opt-level = 3
 debug = false
@@ -30,3 +29,4 @@ codegen-units = 1
 
 [dependencies]
 serde_json = "1.0.85"
+reqwest = "0.11.12"
