--- a/resources/data/application.json
+++ b/resources/data/application.json
@@ -1,5 +1,6 @@
 {
     "version": "1.0.0",
+    "processId": "123",
     "languages": {
         "English": "english",
         "Tiếng Việt": "vietnamese"
